# Amazon-marketing-Streams

./: .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  SETUP.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: keepalive.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_dataset_and_budget_tables.py
app/: main.py
app/api/routes/: health.py  metrics.py
app/clients/: base.py  mock_sqs.py  slack_client.py  sqs_client.py
app/core/: config.py  database.py
app/models/: __init__.py  stream_data.py
app/schemas/: stream_data.py
app/services/: aggregation_service.py  alert_service.py  message_processor.py
app/utils/: metrics_calculator.py
app/workers/: aggregation_worker.py  scheduler.py  sqs_worker.py
cloudformation/: marketing-stream-queue.yaml
scripts/: confirm_subscription.py  create_marketing_stream_subscription.py  create_new_queue.py  deploy_cloudformation.py  list_amazon_profiles_campaigns.py  list_datasets.ps1  list_datasets.py  refresh_access_token.py  run_dev.py  seed_sample_data.py  set_marketing_stream_policy.py  set_sqs_policy.py  set_sqs_policy_service.py  test_mock_sqs.py  test_slack_client.py  verify_sqs_queue.py  view_sqs_messages.py
